Ensure x-detail hover line is not visible when graph is first rendered (it was appearing at x:0 before any hover event occurred)

--- a/rickshaw.css
+++ b/rickshaw.css
@@ -2,6 +2,7 @@
 	pointer-events: none;
 	position: absolute;
 	top: 0;
+	left: -1px;
 	z-index: 2;
 	background: rgba(0, 0, 0, 0.1);
 	bottom: 0;
